# astrelis

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  MIGRATION-0.3.md  README.md  RELEASING.md
crates/astrelis-app/: Cargo.toml  README.md
crates/astrelis-app/examples/: app_demo.rs  continuous_animation.rs  idle_counter.rs
crates/astrelis-app/src/: app.rs  events.rs  lib.rs  phase.rs  plugin.rs  resources.rs  time.rs
crates/astrelis-app/tests/: runtime.rs
crates/astrelis-assets/: Cargo.toml  README.md
crates/astrelis-assets/examples/: asset_loading.rs  basic_loading.rs  hot_reload_demo.rs  multithreaded.rs
crates/astrelis-assets/src/: error.rs  event.rs  handle.rs  hot_reload.rs  io.rs  lib.rs  loader.rs  server.rs  source.rs  state.rs  storage.rs
crates/astrelis-assets/tests/: integration.rs  integration_tests.rs
crates/astrelis-compositor/: Cargo.toml  README.md
crates/astrelis-compositor/benches/: frame_paths.rs
crates/astrelis-compositor/src/: lib.rs
crates/astrelis-core/: Cargo.toml  README.md
crates/astrelis-core-macros/: Cargo.toml
crates/astrelis-core-macros/src/: lib.rs
crates/astrelis-core/benches/: collections.rs  ecs.rs  sparse_set.rs
crates/astrelis-core/src/: app.rs  assets.rs  color.rs  config.rs  engine.rs  event.rs  geometry.rs  id.rs  input.rs  lib.rs  logging.rs  math.rs  profiling.rs  window.rs
crates/astrelis-core/tests/: sparse_set.rs
crates/astrelis-ecs/: Cargo.toml
crates/astrelis-ecs/src/: lib.rs
crates/astrelis-egui/: Cargo.toml
crates/astrelis-egui/examples/: egui_app.rs  textured_quad.rs
crates/astrelis-egui/src/: lib.rs  state.rs
crates/astrelis-geometry/: Cargo.toml
crates/astrelis-geometry/examples/: chart_with_text.rs  egui_chart.rs  interactive_chart.rs  line_chart.rs  live_chart.rs  multi_axis_chart.rs  shapes.rs  streaming_chart.rs
crates/astrelis-geometry/src/: curve.rs  dirty_ranges.rs  fill.rs  gpu_types.rs  instance_buffer.rs  lib.rs  paint.rs  path.rs  pipeline.rs  renderer.rs  shape.rs  stroke.rs  style.rs  tessellator.rs  transform.rs  vertex.rs
crates/astrelis-geometry/tests/: tessellation.rs
crates/astrelis-gpu/: Cargo.toml  README.md
crates/astrelis-gpu-egui/: Cargo.toml
crates/astrelis-gpu-egui/examples/: egui_demo.rs  viewer_demo.rs
crates/astrelis-gpu-egui/src/: convert.rs  lib.rs
crates/astrelis-gpu-wgpu/: Cargo.toml  README.md
crates/astrelis-gpu-wgpu-egui/: Cargo.toml
crates/astrelis-gpu-wgpu-egui/examples/: egui_demo.rs
crates/astrelis-gpu-wgpu-egui/src/: lib.rs
crates/astrelis-gpu-wgpu/examples/: clear_color.rs  clear_window.rs  multi_window_triangle.rs  puffin_test.rs  triangle.rs
crates/astrelis-gpu-wgpu/src/: backend.rs  compute_pass.rs  device.rs  encoder.rs  lib.rs  profiling.rs  queue.rs  render_pass.rs  resources.rs  surface.rs
crates/astrelis-gpu-wgpu/tests/: offscreen.rs  vulkan_timestamps.rs
crates/astrelis-gpu/examples/: clear_color.rs  hybrid_mode.rs  triangle.rs  wait_mode.rs
crates/astrelis-gpu/src/: backend.rs  bind_group.rs  buffer.rs  command.rs  device.rs  error.rs  id.rs  lib.rs  pipeline.rs  profiling.rs  queue.rs  resources.rs  shader.rs  surface.rs  texture.rs  types.rs
crates/astrelis-input/: Cargo.toml  README.md
crates/astrelis-input/examples/: input_polling.rs
crates/astrelis-input/src/: input.rs  lib.rs  state.rs
crates/astrelis-paint/: Cargo.toml  README.md
crates/astrelis-paint-gpu/: Cargo.toml  README.md
crates/astrelis-paint-gpu/examples/: text_demo.rs  vector_demo.rs
crates/astrelis-paint-gpu/src/: lib.rs
crates/astrelis-paint-gpu/tests/: offscreen.rs
crates/astrelis-paint/examples/: headless_display_list.rs
crates/astrelis-paint/src/: lib.rs
crates/astrelis-platform/: Cargo.toml  README.md
crates/astrelis-platform-test/: Cargo.toml  README.md
crates/astrelis-platform-test/src/: lib.rs
crates/astrelis-platform-winit/: Cargo.toml  README.md
crates/astrelis-platform-winit/examples/: basic_window.rs  event_inspector.rs  multi_window.rs  wake_proxy.rs
crates/astrelis-platform-winit/src/: convert.rs  lib.rs  window.rs
crates/astrelis-platform/src/: application.rs  backend.rs  clipboard.rs  error.rs  event.rs  input.rs  lib.rs  window.rs
crates/astrelis-profiling/: Cargo.toml  README.md
crates/astrelis-profiling-egui/: Cargo.toml
crates/astrelis-profiling-egui/src/: flame_graph.rs  layout.rs  lib.rs  timeline_view.rs
crates/astrelis-profiling/benches/: hot_path.rs
crates/astrelis-profiling/examples/: basic_profiling.rs  multithreaded.rs  puffin_viewer_test.rs
crates/astrelis-profiling/src/: clock.rs  counters.rs  data.rs  gpu.rs  lib.rs  profiler.rs  string_table.rs  thread.rs  thread_local.rs  timeline.rs
crates/astrelis-profiling/tests/: public_api.rs  puffin_scopes.rs
crates/astrelis-render/: Cargo.toml  README.md
crates/astrelis-render-2d/: Cargo.toml  README.md
crates/astrelis-render-2d/examples/: sprite_tilemap.rs
crates/astrelis-render-2d/src/: batch.rs  camera.rs  instance.rs  lib.rs  pipeline.rs  renderer.rs  scene.rs  shader.wgsl  shapes.rs  sprite.rs
crates/astrelis-render-2d/tests/: offscreen.rs
crates/astrelis-render-3d/: Cargo.toml  README.md
crates/astrelis-render-3d/examples/: lit_scene.rs
crates/astrelis-render-3d/src/: camera.rs  debug.rs  lib.rs  mesh.rs  pipeline.rs  primitives.rs  renderer.rs  scene.rs  shader.wgsl
crates/astrelis-render-3d/tests/: offscreen.rs
crates/astrelis-render/examples/: batched_renderer.rs  camera_demo.rs  image_blitting.rs  material_system.rs  mesh_primitives.rs  multi_window.rs  performance_benchmark.rs  profiling_demo.rs  render_graph_demo.rs  renderer_api.rs  sprite_sheet.rs  textured_window.rs  textured_window.wgsl  window_manager_demo.rs
crates/astrelis-render/src/: atlas.rs  blend.rs  blit.rs  buffer_pool.rs  camera.rs  capability.rs  (+28 more)
crates/astrelis-scene/: Cargo.toml
crates/astrelis-test-utils/: Cargo.toml
crates/astrelis-text/: Cargo.toml  README.md
crates/astrelis-text-gpu/: Cargo.toml  README.md
crates/astrelis-text-wgpu/: Cargo.toml
crates/astrelis-ui-core/: Cargo.toml  README.md
(+491 files in other folders)
