[workspace]
resolver = "3"
members = [
  "crates/astrelis-app",
  "crates/astrelis-core",
  "crates/astrelis-compositor",
  "crates/astrelis-gpu",
  "crates/astrelis-gpu-wgpu",
  "crates/astrelis-paint",
  "crates/astrelis-paint-gpu",
  "crates/astrelis-platform",
  "crates/astrelis-platform-test",
  "crates/astrelis-platform-winit",
  "crates/astrelis-profiling",
  "crates/astrelis-render",
  "crates/astrelis-render-2d",
  "crates/astrelis-render-3d",
  "crates/astrelis-text",
  "crates/astrelis-text-gpu",
  "crates/astrelis-ui-core",
  "crates/astrelis-ui-docking",
  "crates/astrelis-ui-widgets",
]

[workspace.package]
version = "0.0.0"
authors = ["hxyulin <hxyulin@proton.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/hxyulin/astrelis"

[workspace.dependencies]
astrelis-app = { path = "crates/astrelis-app", version = "0.0.0" }
astrelis-core = { path = "crates/astrelis-core", version = "0.0.0" }
astrelis-compositor = { path = "crates/astrelis-compositor", version = "0.0.0" }
astrelis-gpu = { path = "crates/astrelis-gpu", version = "0.0.0" }
astrelis-platform = { path = "crates/astrelis-platform", version = "0.0.0" }
astrelis-paint = { path = "crates/astrelis-paint", version = "0.0.0" }
astrelis-profiling = { path = "crates/astrelis-profiling", version = "0.0.0" }
astrelis-render = { path = "crates/astrelis-render", version = "0.0.0" }
astrelis-render-2d = { path = "crates/astrelis-render-2d", version = "0.0.0" }
astrelis-render-3d = { path = "crates/astrelis-render-3d", version = "0.0.0" }
astrelis-text = { path = "crates/astrelis-text", version = "0.0.0" }
astrelis-text-gpu = { path = "crates/astrelis-text-gpu", version = "0.0.0" }
astrelis-ui-core = { path = "crates/astrelis-ui-core", version = "0.0.0" }
astrelis-ui-docking = { path = "crates/astrelis-ui-docking", version = "0.0.0" }
astrelis-ui-widgets = { path = "crates/astrelis-ui-widgets", version = "0.0.0" }
arboard = { version = "3.6.1", default-features = false }
glam = { version = "0.33", features = ["mint", "bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
lyon_tessellation = "1.0.20"
parley = { version = "=0.11.0", features = ["complex-scripts"] }
swash = "=0.2.9"
etagere = "=0.3.0"
bitflags = "2"
pollster = "0.4"
wgpu = { version = "=29.0.4", default-features = false, features = ["std", "wgsl"] }
wgpu-profiler = "0.27"
criterion = { version = "0.8", default-features = false, features = [
  "cargo_bench_support",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
taffy = "0.12.2"
unicode-segmentation = "1.12"
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06"] }
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "=0.4.76"
web-sys = "=0.3.103"
web-time = "1.1"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
