[package]
name = "astrelis-assets"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Asset management module for Astrelis game engine"

[features]
default = []
hot-reload = ["dep:notify"]

[dependencies]
astrelis-core.workspace = true
futures-lite = "2.3"
tracing.workspace = true

# Optional: file watching for hot reload
notify = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.14"
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "Response"] }
js-sys = "0.3"
