[package]
name = "astrelis-compositor"
description = "Ordered UI and scene pass composition for Astrelis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrelis-core = { workspace = true }
astrelis-gpu = { workspace = true }
astrelis-paint = { workspace = true }
astrelis-paint-gpu = { path = "../astrelis-paint-gpu" }
astrelis-render = { workspace = true }

[dev-dependencies]
astrelis-gpu-wgpu = { path = "../astrelis-gpu-wgpu" }
criterion = { workspace = true }
pollster = { workspace = true }

[[bench]]
name = "frame_paths"
harness = false

[lints]
workspace = true
