[package]
name = "astrelis-core-macros"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
