[package]
name = "astrelis-ecs"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "A high-performance Entity Component System (ECS) library for Rust."

[dependencies]
