[package]
name = "astrelis-egui"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "EGUI integration for Astrelis"

[dependencies]
astrelis-core.workspace = true
astrelis-render.workspace = true
astrelis-winit.workspace = true

egui.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
tracing.workspace = true
bytemuck.workspace = true

[dev-dependencies]
pollster.workspace = true
