[package]
name = "astrelis-gpu-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "egui integration for the Astrelis GPU backend"

[dependencies]
astrelis-core = { workspace = true }
astrelis-profiling = { workspace = true }
astrelis-window = { workspace = true }
astrelis-gpu = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
astrelis-profiling-egui = { workspace = true }
pollster = { workspace = true }

[lints]
workspace = true
