[package]
name = "astrelis-gpu-wgpu-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "egui integration for the astrelis-gpu-wgpu backend"

[dependencies]
astrelis-core = { workspace = true }
astrelis-window = { workspace = true }
astrelis-gpu-wgpu = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
astrelis-gpu = { workspace = true }
astrelis-window-winit = { workspace = true }
pollster = { workspace = true }

[lints]
workspace = true
