[package]
name = "astrelis-gpu-wgpu"
description = "wgpu-based GPU backend for the Astrelis engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrelis-core = { workspace = true }
astrelis-gpu = { workspace = true }
astrelis-profiling = { workspace = true }
astrelis-window = { workspace = true }
raw-window-handle = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }

[dev-dependencies]
astrelis-window-winit = { workspace = true }
bytemuck = { workspace = true }

[lints]
workspace = true
