[package]
name = "astrelis-gpu-wgpu"
description = "Wgpu backend for the Astrelis GPU API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
astrelis-gpu = { workspace = true }
astrelis-profiling = { workspace = true, optional = true }
wgpu-profiler = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { workspace = true }
wgpu = { workspace = true, features = ["dx12", "gles", "metal", "vulkan", "vulkan-portability"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["fragile-send-sync-non-atomic-wasm", "webgpu"] }

[features]
default = ["profiling"]
profiling = ["dep:astrelis-profiling", "dep:wgpu-profiler"]

[dev-dependencies]
astrelis-platform = { workspace = true }
astrelis-platform-winit = { path = "../astrelis-platform-winit" }
bytemuck = { workspace = true }

[lints]
workspace = true
