[package]
name = "astrelis-gpu"
description = "Concrete wgpu-based GPU types and operations for the Astrelis engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrelis-core = { workspace = true }
astrelis-profiling = { workspace = true }
astrelis-window = { workspace = true }
raw-window-handle = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
wgpu-profiler = { workspace = true }

[dev-dependencies]
bytemuck = { workspace = true }

[lints]
workspace = true
