[package]
name = "astrelis-gpu"
description = "Concrete wgpu-based GPU types and operations for the Astrelis engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
## Use Vulkan via MoltenVK on macOS instead of Metal.
##
## Enables workarounds for macOS 26 (Metal 4) which broke the legacy
## MTLCounterSampleBuffer API. The workarounds include a blocking
## device poll per frame and a separate resolve submission to ensure
## timestamp query results are valid.
molten-vk = ["wgpu/vulkan-portability"]

[dependencies]
astrelis-core = { workspace = true }
astrelis-profiling = { workspace = true }
astrelis-window = { workspace = true }
raw-window-handle = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
wgpu-profiler = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bytemuck = { workspace = true }

[lints]
workspace = true
