[package]
name = "astrelis-input"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Astrelis input handling library"

[dependencies]
astrelis-core.workspace = true
astrelis-winit.workspace = true
