[package]
name = "astrelis-platform-test"
description = "Deterministic scripted platform backend for Astrelis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrelis-core = { workspace = true }
astrelis-platform = { workspace = true }
raw-window-handle = { workspace = true }

[lints]
workspace = true
