[package]
name = "astrelis-platform-winit"
description = "Winit desktop backend for Astrelis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrelis-core = { workspace = true }
astrelis-platform = { workspace = true }
astrelis-profiling = { workspace = true }
raw-window-handle = { workspace = true }
winit = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { workspace = true }
winit = { workspace = true, features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["HtmlCanvasElement"] }

[lints]
workspace = true
