[package]
name = "astrelis-platform"
description = "Backend-neutral desktop platform API for Astrelis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrelis-core = { workspace = true }
raw-window-handle = { workspace = true }

[lints]
workspace = true
