[package]
name = "astrelis-platform"
description = "Backend-neutral desktop platform API for Astrelis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
astrelis-core = { workspace = true }
raw-window-handle = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = { workspace = true }

[lints]
workspace = true
