[package]
name = "astrelis-profiling"
description = "In-engine custom profiler for the Astrelis engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "hot_path"
harness = false

[lints]
workspace = true
