[package]
name = "astrelis-profiling"
description = "In-engine custom profiler for the Astrelis engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["enabled"]
## Compile in profiling support. When off, all macros expand to
## nothing and public API functions become no-ops — true zero cost.
## A runtime toggle (`set_enabled`/`is_enabled`) is available when
## this feature is on.
enabled = []

[dependencies]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "hot_path"
harness = false

[lints]
workspace = true
