[package]
name = "astrelis-render"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Astrelis Core Rendering Module"

[features]
# Enable mock GPU types for testing
mock = ["astrelis-test-utils/mock"]
# Enable image export (PNG screenshots via GpuReadback::save_png)
image = ["dep:image"]
# Enable GPU timestamp profiling via wgpu-profiler with puffin visualization
gpu-profiling = ["dep:wgpu-profiler", "dep:puffin", "astrelis-core/profiling"]

[dependencies]
tracing.workspace = true
astrelis-core.workspace = true
astrelis-test-utils.workspace = true
astrelis-winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
bitflags.workspace = true
ahash.workspace = true
glam.workspace = true
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
wgpu-profiler = { workspace = true, optional = true, features = ["puffin"] }
puffin = { workspace = true, optional = true }
