[package]
name = "astrelis-render"
description = "Shared scene-rendering target and frame vocabulary for Astrelis"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
astrelis-core = { workspace = true }
astrelis-gpu = { workspace = true }

[lints]
workspace = true
