[package]
name = "astrelis-scene"
description = "Scene tree with columnar component storage for the Astrelis engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrelis-core = { workspace = true }
astrelis-app = { workspace = true }
astrelis-profiling = { workspace = true }
slotmap = { workspace = true }

[lints]
workspace = true
