[package]
name = "astrelis-text-gpu"
description = "GPU glyph rasterization and atlas caching for Astrelis text layouts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrelis-core = { workspace = true }
astrelis-gpu = { workspace = true }
astrelis-text = { workspace = true }
etagere = { workspace = true }
swash = { workspace = true }

[lints]
workspace = true
