[package]
name = "astrelis-text"
description = "Backend-independent font discovery, shaping, and retained text layout for Astrelis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
astrelis-core = { workspace = true }
parley = { workspace = true }

[lints]
workspace = true
